Созданна автоматизированная система для цифравизации документов для отдела регистрациии

--- a/AutomatAis3Full/GlavnayLogika/Window/MainWindow.xaml
+++ b/AutomatAis3Full/GlavnayLogika/Window/MainWindow.xaml
@@ -104,7 +104,7 @@
                 <ToggleButton
                     x:Name="Menu"
                     IsChecked="{Binding FullWindow.IsCheck}"
-                    Style="{StaticResource MaterialDesignHamburgerToggleButton}" />
+                    Style="{StaticResource MaterialDesignHamburgerToggleButton}" Background="White" />
                 <TextBlock
                     HorizontalAlignment="Center"
                     FontSize="22"
