Доработан механизм объединения и выгрузки PDF файлов (Требований 3НДФЛ)

--- a/SetupServiceAutomation/Product.wxs
+++ b/SetupServiceAutomation/Product.wxs
@@ -169,8 +169,11 @@
       <Component Id="Ionic.Utils.Zip.dll" Guid="EF85D8F2-43D0-455C-8332-E118F0FBE923">
         <File Id="Ionic.Utils.Zip.dll" Name="Ionic.Utils.Zip.dll" Source="$(var.ServiceAutomation_TargetDir)Ionic.Utils.Zip.dll" />
       </Component>
-      <Component Id="zxing.dlll" Guid="CBD35F94-550E-4ADF-8927-3A008670CA08">
+      <Component Id="zxing.dll" Guid="CBD35F94-550E-4ADF-8927-3A008670CA08">
         <File Id="zxing.dll" Name="zxing.dll" Source="$(var.ServiceAutomation_TargetDir)zxing.dll" />
+      </Component>
+      <Component Id="PdfSharp.dll" Guid="DC550161-E9F1-43A6-890D-CFF528FFE387">
+        <File Id="PdfSharp.dll" Name="PdfSharp.dll" Source="$(var.ServiceAutomation_TargetDir)PdfSharp.dll" />
       </Component>
 		</ComponentGroup>
 	</Fragment>
